[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "HDP_python"
version = "1.0.2"
description = "Heatwave Diagnostics Package (HDP) for computing heatwave metrics over gridded timeseries data."
authors = [
  { name = "Cameron Cummins", email = "cameron.cummins@utexas.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12.3"
dependencies = [
  "numpy",
  "xarray >= 2025.1.1",
  "cartopy",
  "numba >= 0.60.0",
  "nc_time_axis",
  "dask[complete]",
  "zarr",
  "netCDF4",
  "tqdm",
  "ipywidgets",
  "nbformat"
]

keywords = ["HDP", "heat", "heatwave", "heatwave diagnostics package", "climate", "climate model", "timeseries", "heatwave metrics", "diagnostics"]

[project.urls]
Homepage = "https://github.com/AgentOxygen/HDP"
Documentation = "https://hdp.readthedocs.io/"
Issues = "https://github.com/AgentOxygen/HDP"

[tool.setuptools]
packages = ["hdp"]

[tool.setuptools.package-data]
hdp = [
    "graphics/pacl.mplstyle"
]


[tool.pixi.workspace]
channels = ["conda-forge"]

[tool.pixi.pypi-dependencies]
HDP_python = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytest = ">=8.4.2,<9"

